:bell: Nivel 1 - prácticas de las lecciones.

--- a/Level1_RPADeveloperBasicTraining/project.json
+++ b/Level1_RPADeveloperBasicTraining/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Level1_RPADeveloperBasicTraining",
   "description": "Nivel 1 - Desarrollador de RPA formación básica",
-  "main": "Main.xaml",
+  "main": "Practices\\Main.xaml",
   "dependencies": {
     "UiPath.UIAutomation.Activities": "[19.2.0]",
     "UiPath.System.Activities": "[19.2.0]",
